Fix upstream jq test suite compatibility: 483/508 passing (95.1%)